--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
 asgiref==3.2.7
-Django==3.0.5
 django-widget-tweaks==1.4.8
 pytz==2020.1
-sqlparse==0.3.1
+dj-database-url==2.0.0
+Django==3.2.20
+gunicorn==21.2.0
+packaging==23.1
+psycopg2==2.9.7
+sqlparse==0.4.4
+typing_extensions==4.7.1
+tzdata==2023.3
